kube/local/vprojecte-main/service_monolith-current.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vprojecte-main
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: vprojecte-main
  type: ClusterIP
