kube/local/vprojecte-main/ingress_monolith-current.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprojecte-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: vprojecte.local
    - http:
        paths:
          - path: /(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vprojecte-main
                port:
                  number: 80
